[package]
name = "FastPhotogrammetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
cv = { path = "cv-main/cv" }
rayon = "1.5"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
overflow-checks = false

#For FlameGraph only
debug = true